--- a/app/src/main/res/layout/movies_item_row.xml
+++ b/app/src/main/res/layout/movies_item_row.xml
@@ -20,6 +20,14 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_baseline_star_24"
+                android:layout_toRightOf="@id/vote_averageId"
+                android:layout_below="@id/data_releaseId"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="7dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -28,19 +36,31 @@
                 android:text="title"
                 android:layout_toRightOf="@+id/pictureId"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_margin="16dp"/>
+                android:textStyle="italic"
+                android:textColor="#000000"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:text="price"
-                android:id="@+id/priceId"
+                android:layout_margin="8dp"
+                android:text="data_release"
+                android:id="@+id/data_releaseId"
                 android:layout_below="@+id/titleid"
                 android:layout_toRightOf="@+id/pictureId"
                 android:textSize="18sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@+id/pictureId"
+                android:layout_marginTop="8dp"
+                android:text="vote_average"
+                android:id="@+id/vote_averageId"
+                android:layout_below="@id/data_releaseId"/>
 
         </RelativeLayout>
 </androidx.cardview.widget.CardView>
