--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- colorPrimary is used for the default action bar background -->
         <item name="colorPrimary">@color/colorAccent</item>
 
@@ -23,5 +23,6 @@
         <item name="colorPrimary">@android:color/white</item>
 
     </style>
+
 
 </resources>
